# opendata-pdf-to-csv

./: .gitignore  README.md  constants.py  dim-lock.json  dim.json  main.py  main_a.ipynb  pyproject.toml
.github/workflows/: update.yml
38926-671d5279db1e5cb2c137465e22424c6ba27f4524/: todouhuken.txt
data_files/test/: attach_74210_3.xls
output_files/: 01_Hokkaido.csv  02_Aomori.csv  03_Iwate.csv  04_Miyagi.csv  05_Akita.csv  06_Yamagata.csv  07_Fukushima.csv  08_Ibaraki.csv  09_Tochigi.csv  10_Gunma.csv  11_Saitama.csv  12_Chiba.csv  13_Tokyo.csv  14_Kanagawa.csv  15_Niigata.csv  16_Toyama.csv  17_Ishikawa.csv  18_Fukui.csv  19_Yamanashi.csv  20_Nagano.csv  21_Gifu.csv  22_Shizuoka.csv  23_Aichi.csv  24_Mie.csv  25_Shiga.csv  26_Kyoto.csv  27_Osaka.csv  28_Hyogo.csv  29_Nara.csv  30_Wakayama.csv  31_Tottori.csv  32_Shimane.csv  33_Okayama.csv  34_Hiroshima.csv  35_Yamaguchi.csv  36_Tokushima.csv  37_Kagawa.csv  38_Ehime.csv  39_Kochi.csv  40_Fukuoka.csv  (+7 more)
table/: prefectures.csv
